--- a/Subjects/biology.html
+++ b/Subjects/biology.html
@@ -12,7 +12,7 @@
         <h1>Maths</h1>
     </header>
     <div class="container">
-        <div class="columns">
+        <div class="columns-grid">
             <div class="card simple-box">
                 <h3>Title</h3>
                 <a href="../Files/" class="btn" download>Download</a>
